--- a/src/classes/CsvDataImportBatch.cls
+++ b/src/classes/CsvDataImportBatch.cls
@@ -9,30 +9,31 @@ global class CsvDataImportBatch implements Database.Batchable<String>, Database.
 	private List<String> debugMessages;
 	
 	global CsvDataImportBatch(SObjectType objectType, String csvData, Map<Integer, String> fieldPositions, List<WaveApplicationObjectRelation> relations) {
-		try {
-			this.objectType = objectType;
-			this.csvData = csvData;
-			this.fieldPositions = fieldPositions;
-			this.relations = relations;
-			this.debugMessages = new List<String>();
+		this.objectType = objectType;
+		this.csvData = csvData;
+		this.fieldPositions = fieldPositions;
+		this.relations = relations;
+		this.debugMessages = new List<String>();
 
-			// Then we get the table of <fieldName, columnIndexInCSV
-			this.fieldIndexes = new Map<String, Integer>();
-			for(Integer columnNumber: this.fieldPositions.keySet()) {
-	    		
-	    		// Gets the column name
-	    		String headerValue = this.fieldPositions.get(columnNumber);
+		// Then we get the table of <fieldName, columnIndexInCSV
+		this.fieldIndexes = new Map<String, Integer>();
+		for(Integer columnNumber: this.fieldPositions.keySet()) {
+    		
+    		// Gets the column name
+    		String headerValue = this.fieldPositions.get(columnNumber);
 
-	    		this.fieldIndexes.put(headerValue, columnNumber);
-	    	}
+    		this.fieldIndexes.put(headerValue, columnNumber);
+    	}
 
-	    	System.debug('Received ' + this.csvData.length() + ' length string.');
-		}
-		catch(Exception ex){
-			System.debug('Exception in constructor');
-			System.debug(ex.getMessage());
-			System.debug(ex.getStackTraceString());
-		}
+    	for(WaveApplicationObjectRelation wAppObjectRelation: relations){
+    		String colunmName = wAppObjectRelation.csvColumnName;
+    		if(!this.fieldIndexes.containsKey(colunmName)){
+    			throw new WaveConfiguratorException('The column name ' + colunmName + ' is not present in fieldIndexes map.');
+    		}
+    	}
+
+    	System.debug('Received ' + this.csvData.length() + ' length string.');
+		
 	}
 	
 	global Iterable<String> start(Database.BatchableContext BC) {
